[gd_scene load_steps=6 format=3 uid="uid://beu1tudtrtd1f"]

[ext_resource type="Script" path="res://scripts/inventory_ui_slot.gd" id="1_cjljw"]
[ext_resource type="Texture2D" uid="uid://3mbr6kc7gryn" path="res://sprites/inv_slot.png" id="2_et8rd"]
[ext_resource type="Texture2D" uid="uid://8mhhfp7a4r2t" path="res://sprites/inv_slot-new.png" id="2_jill7"]

[sub_resource type="LabelSettings" id="LabelSettings_fe3km"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_sgcl5"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.501961)

[node name="InventorySlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(64, 64)
offset_top = 2.0
offset_right = 64.0
offset_bottom = 66.0
script = ExtResource("1_cjljw")

[node name="BG" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_jill7")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(60, 51)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -21.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CenterContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="ItemSprite" type="Sprite2D" parent="CenterContainer/Panel/CenterContainer/Panel"]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("2_et8rd")

[node name="AmountLabel" type="Label" parent="CenterContainer/Panel"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(45, 20)
layout_mode = 0
offset_left = 15.0
offset_top = -30.0
offset_right = 60.0
offset_bottom = -7.0
scale = Vector2(0.3, 0.3)
text = "99"
label_settings = SubResource("LabelSettings_fe3km")
horizontal_alignment = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = -29.0
offset_top = -30.0
offset_right = 128.0
offset_bottom = -7.0
scale = Vector2(0.3, 0.3)
text = "ITEM NAME"
label_settings = SubResource("LabelSettings_sgcl5")
